# r-gui-2

./: CMakeLists.txt  PKGBUILD  README.md  build.sh  launch.sh
.github/workflows/: mac-installer.yml  ubuntu-installer.yml  windows-installer.yml
installer/: windows-installer.nsi
pkg/r-gui-2/: .BUILDINFO  .MTREE  .PKGINFO
pkg/r-gui-2/usr/share/applications/: r-gui-2.desktop
qiderpkg/: DESCRIPTION
qiderpkg/R/: core.R
qiderpkg/man/: init_help_pane.Rd  resolve_help_url.Rd
rgui2pkg/: DESCRIPTION  NAMESPACE
rgui2pkg/R/: core.R
rgui2pkg/man/: clear.Rd  get_env_info.Rd  init_help_pane.Rd  init_monitor.Rd  update_env.Rd
src/: codeeditor.cpp  codeeditor.h  environmentpane.cpp  filebrowser.cpp  filebrowser.h  helppane.cpp  helppane.h  main.cpp  mainwindow.cpp  mainwindow.h  plotpane.cpp  plotpane.h  syntaxhighlighter.cpp  syntaxhighlighter.h  terminalwidget.cpp  terminalwidget.h  terminalwidget_win.cpp  thememanager.cpp  xterm.qrc
src/xterm/: terminal.html
test/: test.r
